--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Psicuidar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/PSICUIDAR_LOGO_NAVEGADOR_1.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
